--- a/sipenas/src/index.css
+++ b/sipenas/src/index.css
@@ -6,8 +6,8 @@
 
 body {
   margin: 0;
-  display: flex;
-  place-items: center;
-  min-width: 320px;
+  padding: 0;
+  min-width: 100vw;
   min-height: 100vh;
+  overflow-x: hidden;
 }
